--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,13 @@
 login画面
-{{username}}
+{{session}}
+{{session['username']}}
+
+<h1>コメントする</h1>
+<div>
+    <form action="/comment" method="post">
+        <input class="form-input" type="text" name="contents" placeholder="コメント内容"><br>
+        <input class="form-input" type="submit" value="送信">
+    </form>
+</div>
+
+<a href="/logout">ログアウトする</a>
